Fix weird text-wrapping bug on Safari.
A project with the name “Cookeville, August 2019” was wrapping. I could
find no pattern that caused it to wrap with length of text or anything.
Really odd, but this takes care of it.

--- a/static/scss/components/_card.scss
+++ b/static/scss/components/_card.scss
@@ -6,7 +6,10 @@
         display: flex;
         justify-content: space-between;
         align-items: stretch;
-        flex-grow: 1;
+
+        &,
+        > header,
+        > header h1 { flex-grow: 1; }
 
         > header {
             display: flex;
